--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Responsive Portfolio Website",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "İlker Çalım",
   "license": "ISC",
+  "homepage": "https://ilkrclm.github.io/MyPortfolio",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "lightbox2": "^2.11.0",
     "node-sass": "^4.12.0"
   }
